[package]
name = "tower-batch"
version = "0.1.0"
edition = "2021"

[dependencies]

futures-core = "0.3"
pin-project = "1"
pin-project-lite = "0.2.7"
tokio = { version = "1", features = ["sync", "time", "tracing", "rt"] }
tokio-util = { version = "0.7.0", default-features = false }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tower = { version = "0.4.11" }

[dev-dependencies]

tracing-subscriber = { version = "0.3.6", features = ["registry", "env-filter"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync", "test-util", "rt-multi-thread"] }
tokio-test = "0.4.2"
tower = { version = "0.4.11" , features = ["full"] }
tower-test = "0.4.0"

