[package]
name = "tower-batch"
version = "0.1.0"
edition = "2018"
authors = ["Borislav Borisov <chmodas@astutebits.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chmodas/tower-batch"
homepage = "https://github.com/chmodas/tower-batch"
description = """
`batch-tower` is a Tower middleware that allows you to buffer requests for batch processing
until the buffer reaches a maximum size OR a maximum duration elapses.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "service"]
rust-version = "1.49.0"

exclude = [
  ".gitignore",
  ".github",
  "README.md"
]

[dependencies]

futures-core = "0.3.21"
pin-project-lite = "0.2.8"
tokio = { version = "1.17.0", features = ["sync", "time", "tracing", "rt"] }
tokio-util = { version = "0.7.0", default-features = false }
tracing = "0.1.31"
tracing-futures = "0.2.5"
tower = "0.4.12"

[dev-dependencies]

tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
futures = "0.3.21"
tokio = { version = "1", features = ["macros", "sync", "test-util", "rt-multi-thread"] }
tokio-test = "0.4.2"
tower = { version = "0.4.11", features = ["full"] }
tower-test = "0.4.0"

